    configure: updated autotools

2012-09-11  Molnar Karoly  <proton7@freemail.hu>
  * doc/html-help, doc/html-help/Makefile.am:
    Implemented html help for PIC devices.
  * doc/Makefile.am: modified
  * configure.ac, configure, doc/Makefile.in,
    doc/html-help/Makefile.in: updated autotools

2012-09-11  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/directive.c: fixed gperror -> gpverror

2012-09-10  Molnar Karoly  <proton7@freemail.hu>
  * header/p18f13k50.inc, header/p18f14k50.inc: Added LATA{0,1,3} bits
    to "LATA Bits".

2012-09-06  Borut Razem  <borutr@users.sourceforge.net>
  * configure.ac, configure, aclocal.m4, config.h.in, Makefile.in,
    gpasm/Makefile.in, gplink/Makefile.in, gputils/Makefile.in,
    header/Makefile.in, lkr/Makefile.in, libgputils/Makefile.in,
    libiberty/Makefile.am, libiberty/Makefile.in, man/fr/Makefile.in,
    include/stdhdr.h: updated autotools
    libiberty/strndup.c: added
    libiberty/bzero.c: removed

2012-09-06  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/gperror.c, gpasm/directive.c, gpasm/expression.c:
    GPE_NOSYM gperror to gpverror conversion
  * gpasm/directive.c, gpasm/gperror.c, gpasm/gperror.h:
    implemented feature request #59 - "Warning message for branching
    before macros"

2012-09-03  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/scan.l, gpasm/parse.y, gpasm/macro.c, gpasm/macro.h,
    gpasm/gpasm.h.in: cache the source line before tokenization
    so there is no need to re-read the line for source file
  * gpasm/scan.l, libgputils/gpsymbol.c: optinization - use yyleng

2012-09-02  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/gperror.c, gpasm/gperror.h, gpasm/scan.l, gpasm/parse.y,
    gpasm/evaluate.c: error handling reorganization, part 2

2012-09-01  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/directive.c: reverted changes introduced by mistake

2012-08-31  Borut Razem  <borutr@users.sourceforge.net>