@@ -14,7 +14,12 @@
     doc/html-help/Makefile.in: updated autotools
 
 2012-09-11  Borut Razem  <borutr@users.sourceforge.net>
-  * gpasm/directive.c: fixed gperror -> gpverror
+  * gpasm/directive.c, gpasm/gperror.c: fixed gperror -> gpverror
+  * gpasm/directive.c: implemented dtm directive,
+    from "Release Notes for MPASM Assembler v5.45":
+    A new Directive DTM is added for PIC16 Extended only. This directive
+    is similar to existing the DT directive except it generates the
+    MOVLW instead of the RETLW generated by DT.
 
 2012-09-10  Molnar Karoly  <proton7@freemail.hu>
   * header/p18f13k50.inc, header/p18f14k50.inc: Added LATA{0,1,3} bits
